more work on CSS

--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
   </head>
   <body>
     <nav>
-      <h1 class="blogName"><img src ="images/logo.png">
-        <strong>Delicious</strong><br/>The best food blog on the web
-        <img src="images/fb-icon.png" class="social">
-        <img src="images/twit-icon.png" class="social">
-        <img src="images/gp-icon.png" class="social">
-        <img src="images/insta-icon.png" class="social">
-        <img src="images/flic-icon.png" class="social">
-        <img src="images/pint-icon.png" class="social">
-        <img src="images/rss-icon.png" class="social">
-        <img src="images/mail-icon.png" class="social">
+      <h1 class="blogName"><img src ="images/logo.png" id="logo">
+        <strong>Delicious</strong><p class="subtitle">The best food blog on the web</p>
+        <section>
+          <img src="images/fb-icon.png" class="social">
+          <img src="images/twit-icon.png" class="social">
+          <img src="images/gp-icon.png" class="social">
+          <img src="images/insta-icon.png" class="social">
+          <img src="images/flic-icon.png" class="social">
+          <img src="images/pint-icon.png" class="social">
+          <img src="images/rss-icon.png" class="social">
+          <img src="images/mail-icon.png" class="social">
+        </section>
       </h1>
     </nav>
+    <section class="bigline"></section>
     <article>
       <h1 class="blogTitle">Chocolate Pizza</h1>
       <h2 class="DateSection">Posted on 15 Dec 2013 / Desserts<img src="images/print-icon.png">Print</h2>
@@ -47,17 +50,16 @@
         <input type="checkbox" name="ingredient" value="butter"/>2 tbsp butter
         <input type="checkbox" name="ingredient" value="pecans"/>1 cup honey roasted pecans, roughly chopped
       </section>
+      <br/>
     </article>
+    <section class="bigline"></section>
     <footer>
-      
-      <h1 class="author"><img src="images/van-pic.png">Vanessa Stevenson</h1>
-      <p>Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p>
+      <h1 class="author"><img src="images/van-pic.png"><strong>Vanessa Stevenson</strong><p class="descriptor">Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</p></h1>
       <section class="share">
         Share Recipe
       </section>
       <section class = "copyright">
-        <img src="images/small-logo.png">
-        <p>Delicious &copy 2013. All Rights Reserved.<br>Proudly published with Ghost.</p>
+        <p><img src="images/small-logo.png"><br/>Delicious &copy 2013. All Rights Reserved.<br>Proudly published with Ghost.</p>
       </section>
     </footer>
       <script src="js/plugins.js"></script>
