add more systematic characterstics
to continue with the DRY principle I generalized the various conditions I had

as much as I could... Now that I've done it I think the unsemantic way isn't such

a bad idea, because the image seems to be 900px and it would look slightly out of focus

if it were to be 960px, so maybe have the page 900px and use percentages in future.

Working on getting the percentages to work

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src ="images/logo.png" id="logo" class="grid_1">
         <section class="main-heading grid_4">
           <h1 class="blogName">Delicious</h1>
-          <h2>The best food blog on the web.</h2>
+          <h2 class="subtitle">The best food blog on the web.</h2>
         </section>  
         <section class="grid_5 push_7">
           <img src="images/fb-icon.png" class="social">
@@ -33,10 +33,12 @@
       <section class="bigline"></section>
       <article>
         <h1 class="blogTitle">Chocolate Pizza</h1>
-        <h2 class="DateSection">Posted on 15 Dec 2013 / Desserts
-          <section class="print">
-            <img src="images/print-icon.png">Print
-          </section>
+        <h2 class="subtitle">
+            <section class="Date grid_15">Posted on 15 Dec 2013 / Desserts
+            </section>
+            <section class="print omega">
+              <img src="images/print-icon.png">Print
+            </section>
         </h2>
         <img src="images/choco-pizza.png" class="finished-product">
         <section>
@@ -102,18 +104,20 @@
           </table>
         </section>
       </article>
-      <footer>
-        <section class="bigline"></section>
-        <img src="images/van-pic.png" class="grid_2">
+      <section class="bigline"></section>
+      <img src="images/van-pic.png" class="grid_2">
+      <section class="grid_6">
         <h1 class="author">
           Vanessa Stevenson
         </h1>
         <h2 class="descriptor">
           Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.
         </h2>
-        <section class="share">
-          Share Recipe
-        </section>
+      </section>
+      <section class="share">
+        Share Recipe
+      </section>
+      <footer>
         <section class = "copyright">
           <p><img src="images/small-logo.png"><br/>Delicious &copy 2013. All Rights Reserved.<br>Proudly published with Ghost.</p>
         </section>
